<resources>
    <string name="app_name">ActivityLifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">PassWord</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preferences_file_name">Avengers Preferences</string>
</resources>
